Patch by Lukasz Slachciak <l.slachciak@samsung.com> on 2011-07-17 Reviewed by Martin Robinson.

[GTK] [WK2] Fix for getting editor client commands.
 https://bugs.webkit.org/show_bug.cgi?id=63081

 Editor client commands intepretation was incorrect. It was based on the NativeWebKeyboardEvent only.
 In fact EventHandler is generating interpreted events - keypress and keydown. These event types
 are now passed from UIProcess to WebProcess so KeyBindingTranslator can correctly find editor commands.
 Also build break for Debug build was fixed.

* UIProcess/API/gtk/PageClientImpl.cpp: KeyboardEvent type is used for KeyBindingTranslator.
(WebKit::PageClientImpl::getEditorCommandsForKeyEvent): getEditorCommandsForKeyEvent now has additional
parameter describing KeyboardEvent type.
* UIProcess/API/gtk/PageClientImpl.h:
* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/gtk/WebPageProxyGtk.cpp:
(WebKit::WebPageProxy::getEditorCommandsForKeyEvent): KeyboardEvent type passed to PageClient.
* WebProcess/WebCoreSupport/gtk/WebEditorClientGtk.cpp:
(WebKit::WebEditorClient::getEditorCommandsForKeyEvent): Sync message send with KeyboardEvent type.

Canonical link: https://commits.webkit.org/80419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91169 268f45cc-cd09-0410-ab3c-d52691b4dbfc